--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header > .hero-txt {
 .hero-txt > .intro-txt {
     padding-bottom: 15px;
     font-size: 45pt;
-    line-height: 70px;
+    line-height: 65px;
     font-weight: bolder;
     text-align: left;
     background: transparent;
@@ -78,7 +78,7 @@ header > .hero-txt {
     }
     .hero-txt > .contact-btn {
         width: 100%;
-        margin: 10px;
+        margin: 10px 0;
     }
     .hero-txt > .intro-txt {
         font-size: 35pt;
@@ -231,7 +231,7 @@ header > .hero-txt {
 
 @media screen and (max-width: 600px) {
     .our-service {
-        margin: 10px 20px;
+        margin: 10px 10px;
         padding: 20px;
     }
     .service-card {
@@ -325,17 +325,21 @@ header > .hero-txt {
 
 @media screen and (max-width: 600px) {
     .our-client {
-        margin: 10px 20px;
-        padding: 20px;
+        margin: 10px 10px;
+        padding: 10px;
     }
+    .our-client p.intro-text {
+      padding: 20px 35px;
+  }
     .client-category {
         width: 100%;
         box-sizing: border-box;
         flex-wrap: wrap;
     }
     .card-client {
-        padding: 20px 40px;
+        padding: 10px;
     }
+
 }
 
 /* end of our client */
