--- a/style.css
+++ b/style.css
@@ -435,6 +435,14 @@ header > .hero-txt {
   clear: both;
 }
 
+@media screen and (max-width: 600px){
+  .project {
+    margin: 10px;
+    padding: 30px;
+}
+  
+}
+
 /* -------------------------------- 
 
 Main components 
